@@ -1,3 +1,14 @@
+2012-12-12  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* arc-versions.sh: Simplified to use just --auto-checkout and
+	--auto-pull options for all repositories.
+	* build-all.sh: Add --auto-checkout/--no-auto-checkout and
+	--no-auto-pull. Remove linux_user_spec.
+
+2012-12-07  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-linux.sh: New script
+
 2012-09-06  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* ChangeLog: Created
